# micro1-zara-mock

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
agent/: README.md  agent.py  pyproject.toml  verify_setup.py
agent/src/: __init__.py  agent.py  api_client.py  config.py  interview_orchestrator.py
apps/backend/: .env.example  package.json
apps/backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
apps/backend/src/answers/: answers.module.ts  answers.service.ts
apps/backend/src/auth/: auth.controller.ts  auth.module.ts  (+1 more)
apps/frontend/: package.json
architecture/: ARCHITECTURE.md  phase0.md  phase1.md  phase2.md
architecture/gemini/: llm.md  stt.md  tts.md
backend/: .env.example  README.md  package.json  tsconfig.cli.json
backend/src/: app.controller.ts  main.ts
backend/src/answers/: answers.controller.ts  answers.module.ts  answers.service.spec.ts  answers.service.ts
backend/src/auth/: auth.module.ts  auth.service.ts
backend/src/config/: database.config.ts
backend/src/database/: README.md
backend/src/gemini/: gemini.service.spec.ts  gemini.service.ts
backend/src/interviews/: interviews.controller.ts  interviews.service.spec.ts  interviews.service.ts
backend/src/livekit/: livekit.module.ts
backend/src/questions/: questions.module.ts  questions.service.ts
backend/src/users/: users.service.ts
backend/test/: app.e2e-spec.ts  interviews.e2e-spec.ts
frontend/: package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: theme-toggle.tsx
frontend/src/lib/: api-client.ts  interview.service.ts
frontend/src/types/: interview.types.ts  livekit.types.ts
(+88 files in other folders)
