[project]
name = "interview-agent"
version = "0.1.0"
description = "LiveKit Interview Agent with Gemini Live API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "livekit-agents[google]>=1.3.6",
    "livekit-plugins-silero>=1.3.6",
    "livekit-plugins-noise-cancellation>=0.2.5",
    "livekit-plugins-deepgram>=1.3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
